# guerrillamail-client-cpp

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
docs/: WOL-172-live-validation.md
examples/: CMakeLists.txt  basic_flow.cpp
include/guerrillamail/: client.hpp  error.hpp  types.hpp
src/: client.cpp  error.cpp
src/protocol/: bootstrap.cpp  bootstrap.hpp  parsing.cpp  parsing.hpp  requests.cpp  requests.hpp
src/transport/: curl_session.cpp  curl_session.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/integration/: README.md  client_bootstrap_test.cpp  curl_session_test.cpp  live_end_to_end_test.cpp  live_protocol_validation_test.cpp  public_api_end_to_end_test.cpp
tests/support/: README.md  mock_http_server.cpp  mock_http_server.hpp  test_paths.cpp  test_paths.hpp
tests/support/mock_server/: README.md
tests/unit/: bootstrap_test.cpp  error_test.cpp  parsing_test.cpp  requests_test.cpp  smoke_test.cpp
